--- a/Maze/Maze.cbp
+++ b/Maze/Maze.cbp
@@ -35,9 +35,11 @@
 			<Add option="-Wall" />
 			<Add directory="C:/SDL2_image/include/SDL2" />
 			<Add directory="C:/SDL2/include/SDL2" />
+			<Add directory="C:/SDL2_Mixer/include/SDL2" />
+			<Add directory="C:/SDL2_ttf/include" />
 		</Compiler>
 		<Linker>
-			<Add option="-Wall -lmingw32 -lSDL2main -lSDL2  -lSDL2_image" />
+			<Add option="-Wall -lmingw32 -lSDL2main -lSDL2  -lSDL2_image -lSDL2_mixer -lSDL2_ttf" />
 			<Add library="mingw32" />
 			<Add library="SDL2main" />
 			<Add library="SDL2.dll" />
@@ -47,21 +49,25 @@
 			<Add library="dxguid" />
 			<Add directory="C:/SDL2/lib" />
 			<Add directory="C:/SDL2_image/lib" />
+			<Add directory="C:/SDL2_Mixer/lib" />
+			<Add directory="C:/SDL2_ttf/lib/x64" />
 		</Linker>
 		<ExtraCommands>
 			<Add after="XCOPY $(#sdl2)\bin\*.dll $(TARGET_OUTPUT_DIR) /D /Y" />
 		</ExtraCommands>
-		<Unit filename="include/Colors.h" />
 		<Unit filename="include/Game.h" />
 		<Unit filename="include/Map.h" />
 		<Unit filename="include/Object.h" />
+		<Unit filename="include/Projectile.h" />
 		<Unit filename="include/TextureCreator.h" />
+		<Unit filename="include/Treasure.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/Colors.cpp" />
 		<Unit filename="src/Game.cpp" />
 		<Unit filename="src/Map.cpp" />
 		<Unit filename="src/Object.cpp" />
+		<Unit filename="src/Projectile.cpp" />
 		<Unit filename="src/TextureCreator.cpp" />
+		<Unit filename="src/Treasure.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
